--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-icons": "^4.10.1",
     "react-responsive": "^9.0.2",
     "react-router-dom": "^6.14.2",
+    "react-scroll": "^1.8.9",
     "react-swipeable": "^7.0.1"
   },
   "devDependencies": {
